Bug 420291 - Useless m_delayShow config variable
Summary: Useless m_delayShow config variable
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: tabbox (other bugs)
Version First Reported In: git master
Platform: unspecified All
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL: https://github.com/KDE/kwin/blob/mast...
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-19 06:23 UTC by Dante Marshal
Modified: 2023-01-25 12:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dante Marshal 2020-04-19 06:23:27 UTC
SUMMARY
Code one the following like should use m_delayShow boolean variable instead of m_delayShowTime.

https://github.com/KDE/kwin/blob/master/tabbox/tabbox.cpp#L835

(Or an alternative would be to completely discard ShowDelay from config and code, and just use DelayTime config)

OBSERVED RESULT
ShowDelay config has no effect. Instead DelayTime has to be set to 0 for that.

EXPECTED RESULT
TabBar should be shown without delay when ShowDelay config is set to false.
Comment 1 David Edmundson 2020-04-19 18:49:04 UTC
>Code one the following like should use m_delayShow boolean variable instead of m_delayShowTime.

but we'd still want to check for the time being 0.

Is showDelay explosed in the config UI anywhere?

You've done the work, do you want to commit your first patch?
Comment 2 Dante Marshal 2020-04-20 04:58:57 UTC
None of these values are exposed to UI (I guess that's a forgotten feature that is not added yet !)
But they are there in kwinrc file.
We can simply remove the boolean value and everything related to it, because setting time to 0 is no different than setting the boolean to false, in code or performance.
And of course I'd love to contribute, Should I clone now ? or Fork ? or What :/ ?
Comment 3 David Edmundson 2020-04-20 10:04:53 UTC
Yeah, just remove it.

>And of course I'd love to contribute, Should I clone now ? or Fork ? or What :/ ?

\o/

Clone locally, mod, build & test, upload to review.

https://community.kde.org/Get_Involved/development

ping whenever, or use #kwin on IRC
Comment 4 Dante Marshal 2020-04-21 05:26:37 UTC
I'm stuck at installing non-KDE dependencies. I've removed a lot of packages because my distribution (Ubuntu 18.04) doesn't have them in repositories.
And now I'm getting conflicts with versions of my installed packages, like libpulse0 and etc.
This build system is too much hassle :/
It also messes with ~/.bashrc and puts a lot of stuff in my $HOME :/
Should have I built it in a Virtual Machine ? :/
Comment 5 Vlad Zahorodnii 2020-04-27 08:00:04 UTC
Ubuntu 18.04 has pretty old Qt. I recommend to install neon dev edition or something else that comes with more up to date software, e.g. Manjaro.
Comment 6 Bug Janitor Service 2023-01-25 11:49:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3487
Comment 7 Vlad Zahorodnii 2023-01-25 12:40:40 UTC
Git commit 716f386226868c06b65aa3fd1179ad14acaf3e65 by Vlad Zahorodnii.
Committed on 25/01/2023 at 11:48.
Pushed by vladz into branch 'master'.

tabbox: Remove unused ShowDelay option

M  +0    -3    src/kwin.kcfg
M  +0    -1    src/tabbox/tabbox.cpp
M  +1    -2    src/tabbox/tabbox.h

https://invent.kde.org/plasma/kwin/commit/716f386226868c06b65aa3fd1179ad14acaf3e65
Comment 8 Vlad Zahorodnii 2023-01-25 12:41:14 UTC
Git commit fe063d2063ba101bb778ce1b4b1d2e3721ebd57e by Vlad Zahorodnii.
Committed on 25/01/2023 at 12:41.
Pushed by vladz into branch 'cherry-pick-716f3862'.

tabbox: Remove unused ShowDelay option


(cherry picked from commit 716f386226868c06b65aa3fd1179ad14acaf3e65)

M  +0    -3    src/kwin.kcfg
M  +0    -1    src/tabbox/tabbox.cpp
M  +1    -2    src/tabbox/tabbox.h

https://invent.kde.org/plasma/kwin/commit/fe063d2063ba101bb778ce1b4b1d2e3721ebd57e