tabbox: Remove unused ShowDelay option

BUG: 420291